--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,6 @@
     <title>Tim Ocampo | Full Stack Developer Portfolio </title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="root"></div>
   </body>
 </html>
