master | added meta tag image.

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
       name="description"
       content="Tim Ocampo is a Full Stack Developer based out of the Metro Phoenix Area who specializes in MongoDb, Express.js, React + Redux, & Node. Contact | tim@proletdev.com | linkedin.com/in/timocampo/"
     />
+    <meta property="og:image"  content="https://i.ibb.co/4jWRWjf/tim-ocampo-portfolio.jpg">
+    <meta name="twitter:image" content="https://i.ibb.co/4jWRWjf/tim-ocampo-portfolio.jpg">
     <title>Tim Ocampo | Full Stack Developer Portfolio </title>
   </head>
   <body>
