master | added favicon.

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="https://i.ibb.co/308M023/favicon.png">
     <meta
       name="description"
       content="Tim Ocampo is a Full Stack Developer based out of the Metro Phoenix Area who specializes in MongoDb, Express.js, React + Redux, & Node. Contact | tim@proletdev.com | linkedin.com/in/timocampo/"
