master | added propTypes to Mixes, MediaPlayer, Skills, and Navigation.

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="https://i.ibb.co/308M023/favicon.png">
     <meta
       name="description"
-      content="Tim Ocampo is a Full Stack Developer based out of the Metro Phoenix Area who specializes in MongoDb, Express.js, React + Redux, & Node. Contact | tim@proletdev.com | linkedin.com/in/timocampo/"
+      content="A Software Developer based out of the Metro Phoenix Area who specializes in JavaScript, React + Redux, Node.js, Express.js, & MongoDb. Contact | tim@proletdev.com | linkedin.com/in/timocampo/"
     />
     <meta property="og:image"  content="https://i.ibb.co/4jWRWjf/tim-ocampo-portfolio.jpg">
     <meta name="twitter:image" content="https://i.ibb.co/4jWRWjf/tim-ocampo-portfolio.jpg">
